--- a/src/components/Words/words.scss
+++ b/src/components/Words/words.scss
@@ -19,8 +19,10 @@
             color: black;
             border-radius: 14px;
             padding: 5px 15px;
-            font-size: 18px;
+            font-size: 20px;
             transition: all 0.3s ease;
+            cursor: default;
+            margin: 5px;
     
             &:hover {
                 transform: scale(1.2);
